# life-sim

./: .gitignore  README.md
life-sim-backend/: pyproject.toml
life-sim-backend/app/: ai_service.py  auth.py  database.py  image_service.py  main.py  models.py
life-sim-frontend/: index.html  package-lock.json  package.json
life-sim-frontend/src/: App.tsx  api.ts
life-sim-frontend/src/components/: AuthPage.tsx  CharacterCreation.tsx  GamePage.tsx
